<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_tools_black"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shoppingcart_black"
            android:title="@string/menu_cart" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_black"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_send_black"
                android:title="@string/menu_send" />
        </menu>
    </item>

    <item android:title="@string/menu_map">
        <menu>
            <item
                android:id="@+id/nav_map"
                android:icon="@drawable/ic_map_black"
                android:title="@string/menu_map" />
            <item
                android:id="@+id/nav_hotel"
                android:icon="@drawable/ic_hotel_black"
                android:title="@string/menu_hotel" />
            <item
                android:id="@+id/nav_subway"
                android:icon="@drawable/ic_subway_black"
                android:title="@string/menu_subway" />
        </menu>
    </item>
</menu>